tests/snapshots/golden_csharp__csharp_file_tree_single_oauth2_scheme.snap
---
source: tests/golden_csharp.rs
expression: file_tree(&output_dir)
---
[
    ".editorconfig",
    ".env.example",
    ".githooks/pre-commit",
    ".github/workflows/ci.yml",
    ".github/workflows/docker-build.yml",
    ".github/workflows/release.yml",
    ".gitignore",
    ".mcpify/settings.yaml",
    "Auth/AuthErrors.cs",
    "Auth/AuthManager.cs",
    "Auth/IAuthStrategy.cs",
    "Auth/RequestCredentials.cs",
    "Auth/Strategies/OAuth2AuthStrategy.cs",
    "Auth/Strategies/StubAuthStrategy.cs",
    "Cli/Roles.cs",
    "Cli/SetupWizard.cs",
    "Cli/VersionsCommand.cs",
    "Core/ApiClient.cs",
    "Core/AuthStrategies.cs",
    "Core/CircuitBreaker.cs",
    "Core/Config.cs",
    "Core/CredentialStorage.cs",
    "Core/DataStore.cs",
    "Core/EmbeddingService.cs",
    "Core/Errors.cs",
    "Core/HealthChecks.cs",
    "Core/Logging.cs",
    "Core/McpServer.cs",
    "Core/ServiceCollectionExtensions.cs",
    "Core/Tracing.cs",
    "Data/EndpointRecord.cs",
    "Data/SqliteVecStore.cs",
    "Dockerfile",
    "Http/AuthExtractor.cs",
    "Http/AuthGateMiddleware.cs",
    "Http/CorsHeaderMiddleware.cs",
    "Http/HttpServer.cs",
    "Http/LocalhostDetector.cs",
    "Http/Metrics.cs",
    "Http/RequestCredentialProvider.cs",
    "LICENSE",
    "Out.csproj",
    "Program.cs",
    "README.md",
    "Services/ApiClient.cs",
    "Services/EmbeddingService.cs",
    "Services/PopulateEmbeddingsService.cs",
    "Tests/Auth/OAuth2AuthStrategyTests.cs",
    "Tests/Auth/StubAuthStrategyTests.cs",
    "Tests/Core/ConfigTests.cs",
    "Tests/Data/EmbeddingsPopulatedTests.cs",
    "Tests/Data/SqliteVecStoreTests.cs",
    "Tests/Out.Tests.csproj",
    "Tests/Services/EmbeddingServiceTests.cs",
    "Tests/Validation/ValidatorTests.cs",
    "Tools/McpTools.cs",
    "Tools/Profiler/Profiler.csproj",
    "Tools/Profiler/Program.cs",
    "Validation/GeneratedSchemas.json.zst",
    "Validation/Validator.cs",
    "docker-compose.yml",
    "mcp_store.db",
    "scripts/coverage.sh",
    "scripts/profile.sh",
    "scripts/speedscope_to_text.py",
]
